[package]
name = "my_anchor_project"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_anchor_project"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16.0"
polymer-prover = { git = "https://github.com/polymerdao/solana-prover-contracts", tag = "v0.5.3", features = ["cpi"] }